--- a/src/BuildingBlocks/Shared/Shared.csproj
+++ b/src/BuildingBlocks/Shared/Shared.csproj
@@ -10,4 +10,8 @@
     <Folder Include="DTOs\Customer\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+  </ItemGroup>
+
 </Project>
