--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -147,3 +147,15 @@ services:
         - "6004:80"
     restart: always
 
+  order.api:
+    container_name: order.api
+    environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=http://+:80
+        - "ConnectionStrings:DefaultConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=Passw0rd!;Multipleactiveresultsets=true"
+    depends_on:
+        - orderdb
+    ports:
+        - "6005:80"
+    restart: always
+
