--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -52,6 +52,12 @@ services:
         context: .
         dockerfile: Services/Basket.API/Dockerfile
 
+  order.api:
+    image: ${DOCKER_REGISTRY-}order-api:${PLATFORM:-linux}-${TAG:-latest}
+    build:
+        context: .
+        dockerfile: Services/Ordering/Ordering.API/Dockerfile
+
 #network section
 networks:
   default:
