--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,13 +1,6 @@
 {
-  "SMTPEmailSetting": {
-    "DisplayName": "AspNetCore Microservices",
-    "EnableVerification": false,
-    "From": "tinhnb.tech@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "UseSsl": true,
-    "Port": 465,
-    "Username": "tinhnb.tech@gmail.com",
-    "Password": "epglsnjinksevcih"
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=localhost,1435;Database=OrderDb;User Id=sa;Password=Passw0rd!;Multipleactiveresultsets=true"
   },
   "Serilog": {
     "MinimumLevel": {
