--- a/src/Services/Inventory.Product.API/appsettings.json
+++ b/src/Services/Inventory.Product.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseSettings": {
+    "DBProvider": "mongodb",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "InventoryDb"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
